--- a/resources/sass/auth/_navbar.scss
+++ b/resources/sass/auth/_navbar.scss
@@ -29,9 +29,15 @@
         height: 100%;
 
         .navbar-header {
-            font-size: 1.5em;
             display: flex;
             align-items: center;
+            .text-navbar-brand{
+				font-size: 1.3em;
+				margin-left: 8px;
+            }
+            i{
+				font-size: 1.5em;
+            }
 
             .icons::before {
                 font-size: 1.5em;
